2015-01-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (GMCommandSingle): Don't use the address of a
	stack allocation to update argv[0]. Removed updating argv[0] until
	a better design can be found.  Resolves Coverity CID 10223.

	* magick/utility.c (SystemCommand): Fix possible overwrite of
	memory location due to uninitialized 'end' pointer.  Resolves
	Coverity CID 10251.

	* magick/blob.c (WriteBlobFile): Was not closing file in certain
	error conditions.  Resolves Coverity CID 10237.

	* coders/cineon.c (ReadCINEONImage): Don't trust file header so
	much.  Resolves Coverity CIDs 10079, 10310, 10325.

	* coders/art.c (ReadARTImage): Fix signed vs unsigned comparison
	caused by earlier changes.

2014-01-17 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Do not execute wpg raster read in ping mode.

2014-01-15 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Properly deallocating zip structures.

2015-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sfw.c (ReadSFWImage): Fix pixel cache access errors in
	'ping' mode.

2015-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (ReadWMFImage): Fix memory leak in 'ping' mode and
	some error paths.

2015-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jbig.c (ReadJBIGImage): Fix memory leak in 'ping' mode.

	* magick/delegate.c (InvokeDelegate): Fix memory leak of argument
	list when invoking external program via MagickSpawnVP().

2015-01-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Base image width
	and height default limits on the range of a 32-bit signed integer,
	even for 64-bit builds.  These limits are still beyond what most
	computers in the world can handle.  Limits can be increased by the
	user.

	* coders/xwd.c (ReadXWDImage): Check image size limits
	immediately.

	* coders/xc.c (ReadXCImage): Check image size limits immediately.
