@@ -40,7 +40,10 @@
 <ul class="simple">
 <li>magick/command.c (GMCommandSingle): Don't use the address of a
 stack allocation to update argv[0]. Removed updating argv[0] until
-a better design can be found.  Resolves Coverity CID 10223.</li>
+a better design can be found.  Resolves Coverity CID 10223.
+(GMCommandSingle): Plan B: Use static allocation from
+SetClientName() to both store the new command name and provide
+storage for argv[0].</li>
 <li>magick/utility.c (SystemCommand): Fix possible overwrite of
 memory location due to uninitialized 'end' pointer.  Resolves
 Coverity CID 10251.</li>
