@@ -3,6 +3,9 @@
 	* magick/command.c (GMCommandSingle): Don't use the address of a
 	stack allocation to update argv[0]. Removed updating argv[0] until
 	a better design can be found.  Resolves Coverity CID 10223.
+	(GMCommandSingle): Plan B: Use static allocation from
+	SetClientName() to both store the new command name and provide
+	storage for argv[0].
 
 	* magick/utility.c (SystemCommand): Fix possible overwrite of
 	memory location due to uninitialized 'end' pointer.  Resolves
